# BE_Booking_Hotel

./: README.md  pyproject.toml
be_booking_hotel/: db.sqlite3  manage.py  requiment.txt
be_booking_hotel/be_booking_hotel/: asgi.py  settings.py  urls.py  wsgi.py
be_booking_hotel/e_be_booking_hotel/: admin.py  apps.py  urls.py
be_booking_hotel/e_be_booking_hotel/migrations/: 0001_initial.py  0002_alter_hotel_rating.py  0002_hotel_image.py  0003_alter_user_email.py  0003_room.py  0004_alter_user_username_slider.py  0005_alter_user_managers.py  0006_slider_video_url_alter_slider_image_url.py  0007_cart.py  0008_order_orderdetail.py  0009_remove_orderdetail_user.py  0010_remove_order_room_orderdetail_order.py  0011_alter_room_status.py  0012_orderdetail_checkin_date_orderdetail_checkout_date.py  0013_review.py  0014_alter_review_img.py  0015_alter_review_img.py  0016_voucher.py  0017_voucher_usage_count.py  0018_order_voucher.py  0019_alter_order_payment_method_alter_review_img.py  0020_alter_hotel_rating.py
be_booking_hotel/e_be_booking_hotel/models/: __init__.py  area.py  cart.py  hotel.py  order.py  order_detail.py  review.py  room.py  room_images.py  room_utilities.py  slider.py  user.py  utilities.py  voucher.py
be_booking_hotel/e_be_booking_hotel/serializers/: __init__.py  area.py  cart.py  hotel.py  login.py  order.py  order_detail.py  review.py  room.py  room_utilities.py  slider.py  user.py  utilities.py  voucher.py  zalopay.py
be_booking_hotel/e_be_booking_hotel/views/: __init__.py  area.py  cart.py  (+11 more)
be_booking_hotel/templatetags/: custom_filters.py
(+5 files in other folders)
